--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,39 @@
 project(kolib CXX C)
 cmake_minimum_required(VERSION 3.13)
 
-set(CMAKE_SYSTEM_NAME Linux)
-set(CMAKE_SYSTEM_PROCESSOR arm)
+# set(CMAKE_SYSTEM_NAME Linux)
+# set(CMAKE_SYSTEM_PROCESSOR arm)
 
-set(tools /root/x-tools/arm-kobo-linux-gnueabihf)
-set(CMAKE_C_COMPILER ${tools}/bin/arm-kobo-linux-gnueabihf-gcc)
-set(CMAKE_CXX_COMPILER ${tools}/bin/arm-kobo-linux-gnueabihf-g++)
+# set(tools /root/x-tools/arm-kobo-linux-gnueabihf)
+# set(CMAKE_C_COMPILER ${tools}/bin/arm-kobo-linux-gnueabihf-gcc)
+# set(CMAKE_CXX_COMPILER ${tools}/bin/arm-kobo-linux-gnueabihf-g++)
 
-set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
-set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
-set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
-set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)
+# set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
+# set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
+# set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
+# set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)
 
-# A little test program
-add_executable(hello hello/main.cc)
 
 # External deps
-add_subdirectory(thirdparty)
+# add_subdirectory(thirdparty)
 
 # KoLib
 add_library(kolib
     STATIC
 
+    # fs
     src/fs/paths.hh
-    src/test.cc
+
+    # hw
+    src/hw/power.cc
+    src/hw/power.hh
 )
-target_link_libraries(kolib thirdparty/rawdraw)
+# add_dependencies(kolib rawdraw)
+# target_link_libraries(kolib rawdraw)
+
+# A little test program
+add_executable(hello 
+    hello/main.cc
+    )
+add_dependencies(hello kolib)
+target_link_libraries(hello kolib)
